# litefno-repro

./: .gitignore  README.md  notes_deviations.md  pyproject.toml  tldr.md  training.ipynb
.github/workflows/: tests.yml
configs/datasets/: acoustic_scattering_discontinuous.yaml  active_matter.yaml  rayleigh_benard.yaml  (+5 more)
datasets/: acoustic_scattering_discontinuous.yaml  active_matter.yaml  euler_multi_quadrants_openBC.yaml  euler_multi_quadrants_periodicBC.yaml  gray_scott_reaction_diffusion.yaml  rayleigh_benard.yaml  turbulent_radiative_layer_2D.yaml  viscoelastic_instability.yaml
docs/: configs.md  data.md  experiments.md  extensions.md  metrics.md  overview.md  reproduction.md  setup.md  training.md
experiments/: _calibrate.py  _profile.py  _profile2.py  base_fno_s.yaml  base_litefno.yaml  fno_s_acoustic_scattering_discontinuous.yaml  fno_s_active_matter.yaml  fno_s_euler_multi_quadrants_openBC.yaml  fno_s_euler_multi_quadrants_periodicBC.yaml  fno_s_turbulent_radiative_layer_2D.yaml  litefno_active_matter.yaml  litefno_euler_multi_quadrants_openBC.yaml  run_extensions.py
litefno/: cli.py  data.py  download.py  preprocess.py  train.py
litefno_repro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
logs/: gray_scott_reaction_diffusion_litefno.jsonl
paper/: main.tex  references.bib
scripts/: download_dataset.py  generate_proxy_grayscott.py  make_figures.py  preprocess_dataset.py  run_all.sh  run_fno_s.sh  run_litefno.sh  train_stub.py
tests/: test_config.py  test_metrics.py  test_models.py  test_preprocess.py  test_train_utils.py
(+48 files in other folders)
